--- a/views/tmpl/admin/user/users.html
+++ b/views/tmpl/admin/user/users.html
@@ -482,8 +482,6 @@
 										<a href uib-dropdown-toggle style="border-right: 0 none; ">Order by</a>
 										<ul class="dropdown-menu with-arrow animated littleFadeInUp">
 											<li><a href="" ng-click="orderByMe('user_first_name')">Name</a></li>
-											<!-- <li><a href="" ng-click="orderByMe('group')">Group</a></li> -->
-											<!-- <li><a href="" ng-click="orderByMe('facility')">Facility</a></li> -->
 											<li><a href="" ng-click="orderByMe('user_phone_no')">Phone</a></li>
 										</ul>
 									</label>
@@ -516,10 +514,10 @@
 										<label for="fbtitle" class="control-label">Search by name</label>
 										<input type="text" class="form-control" id="fbtitle" ng-model="name">
 									</div>
-									<!-- <div class="col-md-3">
+									<div class="col-md-3">
 										<label for="fblocation" class="control-label">Search by group</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="group">
-									</div> -->
+									</div>
 									<div class="col-md-3">
 										<label for="fblocation" class="control-label">Search by phone</label>
 										<input type="text" class="form-control" id="fblocation" ng-model="phone">
