--- a/views/tmpl/admin/settings.html
+++ b/views/tmpl/admin/settings.html
@@ -4,7 +4,91 @@
 	</div>
 	
 	<div class="pagecontent">
-		<div class="row">		
+		<div class="row">
+			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+				<div class="card">
+					<div class="bg-dashboard pdevicebg">
+						<div class="bg-transparent">
+							<div class="row">
+								<div class="col-md-12">
+									<h3 class="custom-font">{{page.title}}</h3>
+									<p>{{page.subtitle}}</p>									
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			
+			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+				<div class="card">
+					<a ui-sref="app.admin.device.devices">
+						<div class="noback bg-blue">						
+							<div class="row">
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/device-icon.png" alt="">
+									</div>
+								</div>
+								<div class="col-xs-6">	
+									<div class="itxt">							
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
+										<span class="text-lg">Devices</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+			
+			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+				<div class="card">					
+					<a ui-sref="app.admin.door.doors">
+						<div class="noback bg-slategray lt">
+							<div class="row">
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/doors-icon.png" alt="">
+									</div>
+								</div>
+								<div class="col-xs-6">
+									<div class="itxt">
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+										<span class="text-lg">Doors</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>
+			
+			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+				<div class="card">
+					<a ui-sref="app.admin.user.users">
+						<div class="noback bg-lightred">						
+							<div class="row">
+								<div class="col-xs-6 ta-r">
+									<div class="iconbx">
+										<img src="images/users-icon.png" alt="">
+									</div>
+								</div>
+								<div class="col-xs-6">
+									<div class="itxt">								
+										<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+										<span class="text-lg">Users</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</a>
+				</div>
+			</div>	
+		</div>
+
+
+		<div class="row">
 			<div class="col-md-12"> 
 				<section class="tile tile-simple"> 
 					<div class="tile-body p-0"> 
@@ -81,8 +165,8 @@
 														
 														<div class="row">
 															<div class="form-group col-md-12 legend">			
-																<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Save</button>
-																<button type="button" onclick="window.history.back()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10">Cancel</button>
+																<button type="submit" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10" ng-disabled="relays.length==0">Save </button>
+																<button type="button" onclick="window.history.back()" class="btn btn-default btn-rounded btn-ef btn-ef-6 btn-ef-6a mt-10" >Cancel</button>
 															</div>
 														</div>
 														</form>
@@ -684,6 +768,8 @@
 					</div>
 				</section>
 			</div>
+		</div>
+		
 		</div>
 	</div>
 </div>
