Added user bug fixes

--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -97,7 +97,7 @@
 						<span class="text-muted">{{userData.phone_number_1}}</span>
 						<div class="mt-40">
 							<button class="btn btn-rounded-20 btn-sm btn-greensea">Send Message</button>
-							<button class="btn btn-rounded-20 btn-sm btn-lightred">Delete User</button>
+							<button class="btn btn-rounded-20 btn-sm btn-lightred" ng-click="deleteUser($event,editUser.user_id)">Delete User</button>
 						</div>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
@@ -338,6 +338,7 @@
 													</form>
 												</div>
 												<div class="col-sm-6">
+													<span class="error">{{NfcCodeMessage}}</span>
 													<form ng-submit="submitEditNfcCode(editUser, nfc_edit_form)" ng-validate="validationOptions" name="nfc_edit_form">
 														<div class="form-group greenseatx"><strong>NFC Code</strong></div>
 														<div class="row">
@@ -345,7 +346,7 @@
 																<label for="">Code</label>
 															</div>
 															<div class="col-md-8">
-																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx" name="nfc_code" ng-model="editUser.nfc_code">
+																<input type="text" class="form-control w-md" id="" value="xxxxxx-xx" name="nfc_code" ng-model="editUser.nfc_code" required>
 															</div>
 														</div>
 														<div class="row">
@@ -418,7 +419,7 @@
 																<label for="">Username</label>
 															</div>
 															<div class="col-md-8">
-																<input type="text" class="form-control w-md" id="" value="abcuser" disabled>
+																<input type="text" class="form-control" id="" ng-model="editUser.ble_name" name="ble_name" required>
 															</div>
 														</div>
 														<div class="row">
@@ -426,7 +427,7 @@
 																<label for="">Password</label>
 															</div>
 															<div class="col-md-8">
-																<input type="password" class="form-control w-md" id="" value="xxxxxx-xx">
+																<input type="password" class="form-control" id="" ng-model="editUser.ble_pass" name="ble_pass" required>
 															</div>
 														</div>
 														<!--div class="row">
