--- a/views/tmpl/admin/user/user-groups.html
+++ b/views/tmpl/admin/user/user-groups.html
@@ -8,7 +8,7 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<div class="bg-dashboard">
-						<div class="bg-transparent">
+						<div class="bg-transparent usersbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -18,58 +18,67 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">15</p>
-									<span class="text-lg">Primary Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">7</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">35</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
+			</div>			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">95</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -77,8 +86,7 @@
 	
 		<div class="row"  ng-controller="UserGroupsCtrl">
 			<div class="col-md-12">	   
-				<section class="tile box-shadow" fullscreen="isFullscreen06">
-				
+				<section class="tile box-shadow">				
 					<div class="tile-header dvd dvd-btm">
 						<h1 class="custom-font"><strong>{{page.title}}</strong></h1>
 						<ul class="controls">
@@ -89,20 +97,89 @@
 											<div class="modal-header">
 												<h4 class="modal-title custom-font">Create User Groups</h4>
 											</div>
-											<span class="error">{{user_group_error}}</span>
 											<div class="modal-body">											
 												<div class="form-group">
 													<label for="">Group Name</label>
 													<input type="text" name="usergroup_name" id="usergroup_name" class="form-control mb-10" placeholder="" ng-model="usergroup.usergroup_name" required>
 												</div>
-												
-												<div class="form-group">
-													<label for="">User Group Photo</label>
-													<div class="profilephoto">
-														<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-														<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+												<div class="form-group row">													
+													<div class="col-md-6">
+														<label for="">User Group Photo</label>
+														<div class="profilephoto">
+															<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+															<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+														</div>
 													</div>
-												</div>																
+													<div class="col-md-6">
+														<label for="">Facility</label><br/>
+														<select class="form-control" disabled>
+															<option selected>USA Corporate Services</option>
+															<option>Aerzen USA Corporation</option>
+														</select>
+													</div>
+												</div>
+												<div class="form-group mt-10">
+													<div class="tile-body p-0">
+														<table class="table table-bordered">
+															<thead>
+																<tr>
+																	<th>Door/Door Groups</th>
+																	<th width="225">Schedule Groups</th>
+																</tr>
+															</thead>
+															<tbody>
+																<tr>
+																	<td>Main Gate Front</td>
+																	<td>
+																		<select class="form-control">
+																			<option>Select Schedule Group</option>
+																			<option>Office-Weekdays</option>
+																			<option>Office-Weekend</option>
+																			<option>Cleaning-Weekdays</option>
+																			<option>Cleaning-Weekend</option>
+																		</select>
+																	</td>
+																</tr>
+																<tr>
+																	<td>Entry Gate</td>
+																	<td>
+																		<select class="form-control">
+																			<option>Select Schedule Group</option>
+																			<option>Office-Weekdays</option>
+																			<option>Office-Weekend</option>
+																			<option>Cleaning-Weekdays</option>
+																			<option>Cleaning-Weekend</option>
+																		</select>
+																	</td>
+																</tr>
+																<tr>
+																	<td>Main Gate Back</td>
+																	<td>
+																		<select class="form-control">
+																			<option>Select Schedule Group</option>
+																			<option>Office-Weekdays</option>
+																			<option>Office-Weekend</option>
+																			<option>Cleaning-Weekdays</option>
+																			<option>Cleaning-Weekend</option>
+																		</select>
+																	</td>
+																</tr>
+																<tr>
+																	<td>Pool Gate</td>
+																	<td>
+																		<select class="form-control">
+																			<option>Select Schedule Group</option>
+																			<option>Office-Weekdays</option>
+																			<option>Office-Weekend</option>
+																			<option>Cleaning-Weekdays</option>
+																			<option>Cleaning-Weekend</option>
+																		</select>
+																	</td>
+																</tr>
+															</tbody>
+														</table>
+													</div>
+												</div>
 											</div>
 											<div class="modal-footer">
 												<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
@@ -119,7 +196,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-9 filterorder">
+								<div class="col-md-4 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -132,9 +209,17 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-3 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-md-8">
+									<div class="row">
+										<div class="col-md-6 search first">
+											<input type="text" class="form-control" placeholder="Search by text....">
+											<button class="btn btn-default br-2-r" type="button">Search</button>
+										</div>
+										<div class="col-md-6 profilephoto csvupload ta-r">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
 								<div class="filterfields" ng-hide="filtershow">
 									<div class="col-md-3">
@@ -175,16 +260,86 @@
 															<div class="modal-body">											
 																<div class="form-group">
 																	<label for="">Group Name</label>
-																	<input type="text" name="" id="" class="form-control mb-10" value="Office Hours">
+																	<input type="text" name="" id="" class="form-control mb-10" value="Office Hours" placeholder="">
 																</div>
-																
-																<div class="form-group">
-																	<label for="">User Group Photo</label>
-																	<div class="profilephoto">
-																		<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
-																		<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+																<div class="form-group row">						
+																	<div class="col-md-6">
+																		<label for="">User Group Photo</label>
+																		<div class="profilephoto">
+																			<input ui-jq="filestyle" type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+																			<div class="bootstrap-filestyle input-group"><input type="text" class="form-control " disabled=""> <span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><span class="glyphicon fa fa-inbox"></span> Find file</label></span></div>
+																		</div>
 																	</div>
-																</div>																
+																	<div class="col-md-6">
+																		<label for="">Facility</label><br/>
+																		<select class="form-control" disabled>
+																			<option selected>USA Corporate Services</option>
+																			<option>Aerzen USA Corporation</option>
+																		</select>
+																	</div>
+																</div>
+																<div class="form-group mt-10">
+																	<div class="tile-body p-0">
+																		<table class="table table-bordered">
+																			<thead>
+																				<tr>
+																					<th>Door/Door Groups</th>
+																					<th width="225">Schedule Groups</th>
+																				</tr>
+																			</thead>
+																			<tbody>
+																				<tr>
+																					<td>Main Gate Front</td>
+																					<td>
+																						<select class="form-control">
+																							<option>Select Schedule Group</option>
+																							<option selected>Office-Weekdays</option>
+																							<option>Office-Weekend</option>
+																							<option>Cleaning-Weekdays</option>
+																							<option>Cleaning-Weekend</option>
+																						</select>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>Entry Gate</td>
+																					<td>
+																						<select class="form-control">
+																							<option>Select Schedule Group</option>
+																							<option>Office-Weekdays</option>
+																							<option>Office-Weekend</option>
+																							<option>Cleaning-Weekdays</option>
+																							<option>Cleaning-Weekend</option>
+																						</select>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>Main Gate Back</td>
+																					<td>
+																						<select class="form-control">
+																							<option>Select Schedule Group</option>
+																							<option>Office-Weekdays</option>
+																							<option>Office-Weekend</option>
+																							<option selected>Cleaning-Weekdays</option>
+																							<option>Cleaning-Weekend</option>
+																						</select>
+																					</td>
+																				</tr>
+																				<tr>
+																					<td>Pool Gate</td>
+																					<td>
+																						<select class="form-control">
+																							<option>Select Schedule Group</option>
+																							<option>Office-Weekdays</option>
+																							<option>Office-Weekend</option>
+																							<option>Cleaning-Weekdays</option>
+																							<option selected>Cleaning-Weekend</option>
+																						</select>
+																					</td>
+																				</tr>
+																			</tbody>
+																		</table>
+																	</div>
+																</div>
 															</div>
 															<div class="modal-footer">
 																<button class="btn btn-lightred btn-rounded btn-ef btn-ef-4 btn-ef-4c" ng-click="cancel()"><i class="fa fa-arrow-left"></i> Close</button>
