--- a/views/tmpl/admin/device/dependent-devices-details.html
+++ b/views/tmpl/admin/device/dependent-devices-details.html
@@ -116,7 +116,7 @@
 						<span class="text-muted">{{details.device_model}}</span>
 						<div class="mt-40">
 							<a ui-sref="app.admin.user.users" class="btn btn-rounded-20 btn-sm btn-lightred ml-5 mr-5">Add User</a>
-							<a href="" class="btn btn-rounded-20 btn-sm btn-slategray">Delete Device</a>
+							<a ng-click="deleteThisDevice()" class="btn btn-rounded-20 btn-sm btn-slategray">Delete Device</a>
 						</div>
 					</div> 
 					<div class="tile-body text-center bg-blue p-0"> 
