--- a/views/tmpl/admin/device/dependent-devices.html
+++ b/views/tmpl/admin/device/dependent-devices.html
@@ -238,7 +238,7 @@
 								<div class="glview">
 									<md-content>			
 										<md-card ng-repeat="device in dependentDevice | filter:text | filter:title | filter:facility | orderBy:myOrderBy">
-											<a ui-sref="app.admin.device.device-details"><img ng-src="{{imagePath}}/device/{{ device.imagename }}.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.device.device-details"><img ng-src="images/device/3.jpg" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_name }}</h2>
 												<p>{{ device.device_model }}</p>
