--- a/views/tmpl/admin/device/devices.html
+++ b/views/tmpl/admin/device/devices.html
@@ -236,7 +236,7 @@
 												<a ui-sref="app.admin.service-plan"><i class="fa fa-shopping-cart" aria-hidden="true"></i></a>
 												<a ui-sref="app.admin.settings({device_id:device.device_id})"><i class="fa fa-cog" aria-hidden="true"></i></a>
 											</span>
-											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="{{imagePath}}/device/{{ device.device_image }}.jpg" class="md-card-image" alt="Washed Out"></a>
+											<a ui-sref="app.admin.device.device-details({device_id:device.device_id})"><img ng-src="images/device/1.jpg" class="md-card-image" alt="Washed Out"></a>
 											<md-card-content>
 												<h2 class="md-title">{{ device.device_name }}</h2>
 												<p>{{ device.device_model }}</p>
