Add door and list door

--- a/views/tmpl/admin/user/user-profile.html
+++ b/views/tmpl/admin/user/user-profile.html
@@ -139,7 +139,7 @@
 												<p><label>Phone</label>{{userData.phone_code}}</p>
 												<p><label>Address</label>{{userData.user_address}}</p>
 												<p><label>Status</label>{{userData.user_status}}</p>
-												<p><label>Expiration Date</label>{{userData.user_expiration_date|date:'dd-MM-yyyy'}}</p>
+												<p><label>Expiration Date</label>{{userData.user_expiration_date}}</p>
 											</div>
 										</div>
 										<div class="col-md-6">
