--- a/views/tmpl/admin/door/doors.html
+++ b/views/tmpl/admin/door/doors.html
@@ -7,8 +7,8 @@
 		<div class="row">		
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
-					<div class="bg-dashboard pdevicebg">
-						<div class="bg-transparent">
+					<div class="bg-dashboard">
+						<div class="bg-transparent doorbg">
 							<div class="row">
 								<div class="col-md-12">
 									<h3 class="custom-font">{{page.title}}</h3>
@@ -23,35 +23,43 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
 									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.primary_device}}</p>
-									<span class="text-lg">Primary Devices</span>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
 			
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">					
-					<a ui-sref="app.admin.device.dependent-devices" href="#/app/admin/device/dependent-devices">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-mobile fa-5x"></i>
+				<div class="card">
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.dependent_device}}</p>
-									<span class="text-lg">Dependent Devices</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.door}}</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>
@@ -59,23 +67,27 @@
 			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
 				<div class="card">
 					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
-									<span class="text-lg">Users</span>
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
 								</div>
 							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">{{dashboardData.user}}</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
 						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
 		</div>
 		
-		<div class="row">
+		<div class="row" ng-controller="DoorCtrl">
 			<div class="col-md-12">
 				<section class="tile box-shadow" fullscreen="isFullscreen06">
 					<div class="tile-header dvd dvd-btm">
@@ -84,34 +96,40 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form" ng-submit="submitAddDoor(addDoors)">
+										<form role="form" ng-validate="validationOptions" name="create_door" ng-submit="createDoor(door, create_door)">
 											<div class="modal-header"><h4 class="modal-title custom-font">Create Door</h4></div>
 											<div class="modal-body">	
+											<span class="error">{{doormsg}}</span>
 												<div class="row">
 													<div class="col-md-6 first">
 														<div class="form-group">
 															<label for="">Name</label>
-															<input type="text" name="" ng-model="addDoors.name" id="" class="form-control mb-10" placeholder="" required>
+															<input type="text" name="" id="" class="form-control mb-10" placeholder="" ng-model="door.name" required>
 														</div>
 													</div>
 													<div class="col-md-6 last">
 														<div class="form-group">
 															<label for="">Facility</label><br/>
-															<select class="form-control" ng-model="addDoors.facility_id" ng-options="item.facility_id as item.facility_name for item in facilityList track by item.facility_id" >															
-																<option value="">Select</option>
+															<select class="form-control" disabled>
+																<option selected>USA Corporate Services</option>
+																<option>Aerzen USA Corporation</option>
 															</select>
 														</div>
 													</div>
 												</div>
 												<div class="form-group">
-													<label for="">Description</label>
-													<textarea name="" id="" class="form-control mb-10" ng-model="addDoors.description" placeholder=""></textarea>
+													<label for="description">Description</label>
+													<textarea name="description" id="" class="form-control mb-10" placeholder=""  ng-model="door.description" required></textarea>
 												</div>
-												<div class="form-group">
-													<label for="">Device Type</label><br/>
-													<div class="btn-group btnrounded">
-														<label class="btn btn-default" ng-model="addDoors.status" uib-btn-radio="1">Active</label>
-														<label class="btn btn-default" ng-model="addDoors.status" uib-btn-radio="0">Inactive</label>
+												<div class="row">
+													<div class="col-md-6 first">
+														<div class="form-group">
+															<label for="">Device Type</label><br/>
+															<div class="btn-group btnrounded" ng-controller="ActivebtnCtrl">
+																<label class="btn btn-default" ng-model="door.status" uib-btn-radio="1">Active</label>
+																<label class="btn btn-default" ng-model="door.status" uib-btn-radio="0">Inactive</label>
+															</div>
+														</div>
 													</div>
 												</div>
 											</div>
@@ -130,7 +148,7 @@
 					<div class="hometabs">
 						<div class="tile-body table-custom">
 							<div class="row pos-r mb-20">
-								<div class="col-md-4 filterorder">
+								<div class="col-md-3 filterorder">
 									<label class="control-label" ng-init="filtershow=true">
 										<a href="javascript:void()"><input type="checkbox" ng-model="filtershow" class="hideshowfilter"/>Filter by</a>
 									</label>
@@ -143,11 +161,19 @@
 										</ul>
 									</label>
 								</div>
-								<div class="col-md-4 search">
-									<input type="text" class="form-control" placeholder="Search by text....">
-									<button class="btn btn-default br-2-r" type="button">Search</button>
+								<div class="col-md-6">
+									<div class="row">
+										<div class="col-md-9 search">
+											<input type="text" class="form-control" ng-model="searchText" ng-keyup="searchFunction($event)" placeholder="Search by text....">
+											<button class="btn btn-default  br-2-r" type="button" ng-click="searchFunction()">Search</button>
+										</div>
+										<div class="col-md-3 profilephoto csvupload">
+											<input type="file" class="filestyle user-profilep" ui-options="{ buttonText: 'Find file', iconName: 'fa fa-inbox' }" id="profilep-2" tabindex="-1">
+											<span class="group-span-filestyle input-group-btn" tabindex="0"><label for="profilep-2" class="btn btn-default "><i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp; Upload CSV</label></span>
+										</div>
+									</div>
 								</div>
-								<div class="col-md-4">
+								<div class="col-md-3">
 									<div class="gridlistbar ta-r pull-right">
 										<label class="control-label">View by</label>
 										<a href="" class="list-icon" ng-class="{active: layout == 'list'}" ng-click="changeClass()"><i class="fa fa-th-list" aria-hidden="true"></i></a>
@@ -183,8 +209,8 @@
 									<md-content>			
 										<md-card ng-repeat="door in adoors | limitTo:totalDisplayed | filter:text | filter:title | filter:status | orderBy:myOrderBy">
 											<md-card-content>
-												<h2 class="md-title mt-40">{{ door.title }}</h2>
-												<p>{{ door.status }}</p>
+												<h2 class="md-title mt-40">{{ door.door_name }}</h2>
+												<p>{{ door.status == '1' ? 'Active' : 'Inactive' }}</p>
 												<p><a ui-sref="app.admin.device.device-details">{{ door.device }}</a></p>
 												<p style="height:auto;">{{ door.description | limitTo: 75 }}{{door.description.length > 75 ? '...' : ''}}</p>
 											</md-card-content>
@@ -195,7 +221,7 @@
 											</div>
 										</md-card>										
 									</md-content>
-									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="loadMore()" ng-style="lmbtn">Load more</button>
+									<button class="btn btn-success btn-border btn-rounded m-0-auto f-wm" ng-click="listDoors()" ng-style="lmbtn">Load more</button>
 								</div>
 							</div>
 						</div>
