--- a/views/tmpl/admin/door/door-groups.html
+++ b/views/tmpl/admin/door/door-groups.html
@@ -5,7 +5,7 @@
 	
 	<div class="pagecontent">
 		<div class="row">		
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			<div class="dnone card-container col-sm-3 col-md-3">
 				<div class="card">
 					<div class="bg-dashboard">
 						<div class="bg-transparent">
@@ -18,58 +18,67 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
-				<div class="card">
-					<a ui-sref="app.admin.facility.facility">
-						<div class="noback bg-greensea">
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-map-marker fa-5x"></i>
-								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Facility</p>
-									<span class="text-lg">2</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
 					<a ui-sref="app.admin.device.devices">
-						<div class="noback bg-blue">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-fax fa-5x"></i>
+					<div class="noback bg-blue">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/device-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Devices</p>
-									<span class="text-lg">35</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">22</p>
+									<span class="text-lg">Devices</span>
 								</div>
 							</div>
 						</div>
+					</div>
 					</a>
 				</div>
-			</div>
-			
-			<div class="card-container col-lg-3 col-sm-6 col-sm-12">
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
 				<div class="card">
-					<a ui-sref="app.admin.user.users">
-						<div class="noback bg-lightred">						
-							<div class="row">
-								<div class="col-xs-4 ta-c">
-									<i class="fa fa-users fa-5x"></i>
+					<a ui-sref="app.admin.door.doors">
+					<div class="noback bg-slategray lt">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/doors-icon.png" alt="">
 								</div>
-								<div class="col-xs-8">								
-									<p class="text-elg text-strong mt-5 mb-5">Users</p>
-									<span class="text-lg">145</span>
+							</div>
+							<div class="col-xs-6">	
+								<div class="itxt">							
+									<p class="text-elg text-strong mt-5 mb-5">35</p>
+									<span class="text-lg">Doors</span>
 								</div>
 							</div>
 						</div>
+					</div>
+					</a>
+				</div>
+			</div>			
+			<div class="card-container col-sm-4 col-md-3">
+				<div class="card">
+					<a ui-sref="app.admin.user.users">
+					<div class="noback bg-lightred">						
+						<div class="row">
+							<div class="col-xs-6 ta-r">
+								<div class="iconbx">
+									<img src="images/users-icon.png" alt="">
+								</div>
+							</div>
+							<div class="col-xs-6">
+								<div class="itxt">								
+									<p class="text-elg text-strong mt-5 mb-5">95</p>
+									<span class="text-lg">Users</span>
+								</div>	
+							</div>
+						</div>
+					</div>
 					</a>
 				</div>
 			</div>			
@@ -84,14 +93,19 @@
 							<li class="addpopup">
 								<div ng-controller="ModalDemoCtrl">
 									<script type="text/ng-template" id="myModalContent.html">
-										<form name="form1" role="form">
+										<form name="form1" role="form" ng-submit="submitCreateDoorGroup(doorGroup)">
 											<div class="modal-header"><h4 class="modal-title custom-font">Create Door Groups</h4></div>
-											<div class="modal-body">
-												<div class="overflow">												
-													<div class="form-group">
-														<label for="">Group Name</label>
-														<input type="text" name="" id="" class="form-control mb-10" placeholder="">
-													</div>												
+											<div class="modal-body">						
+												<div class="form-group overflow">
+													<label for="">Group Name</label>
+													<input type="text" name="" ng-model="doorGroup.name" id="" class="form-control" placeholder="">
+												</div>
+												<div class="form-group">
+													<label for="">Doors</label>
+													<select class="form-control" ng-model="doorGroup.doors" Multiple chosen="{width: '100%'}" ng-options="item.door_id as item.door_name for item in doorList">
+
+													</select>
+													<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.admin.door.doors">Add Door</a></small>
 												</div>
 											</div>
 											<div class="modal-footer">
@@ -133,12 +147,24 @@
 															<div class="modal-header">
 																<h4 class="modal-title custom-font">Edit Door Groups</h4>
 															</div>
-															<div class="modal-body">
-																<div class="overflow">												
-																	<div class="form-group">
-																		<label for="">Group Name</label>
-																		<input type="text" name="" id="" class="form-control mb-10" value="Entry Gate">
-																	</div>												
+															<div class="modal-body">	
+																<div class="form-group overflow">
+																	<label for="">Group Name</label>
+																	<input type="text" name="" id="" class="form-control mb-10" value="Entry Gate">
+																</div>
+																<div class="form-group">
+																	<label for="">Doors</label>
+																	<select class="form-control" Multiple chosen="{width: '100%'}">
+																		<option selected>Main Gate Front</option>
+																		<option>Main Gate Back</option>
+																		<option>Exit Gate Front</option>
+																		<option selected>Exit Gate Back</option>
+																		<option>Parking Entry Gate</option>
+																		<option>Parking Exit Gate</option>
+																		<option>Pool Gate</option>							
+																		<option>Gym Gate</option>
+																	</select>
+																	<small class="pull-right mb-10"><a ng-click="cancel()" ui-sref="app.subadmin.door.doors">Add Door</a></small>
 																</div>
 															</div>
 															<div class="modal-footer">
